crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@84.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMP_TBL VALUES ('Feb 28 17:32:01 1997');"
---
InsertStmt@0..58
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "TIMESTAMP_TBL"
  Whitespace@25..26 " "
  SelectStmt@26..56
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..56
      AConst@34..56
        Sconst@34..56 "'Feb 28 17:32:01 1997'"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

